# ffmpeg-media-tools

./: README.md  media_tools.ipynb  mkv_processor.py  pyproject.toml
app/: main.py
app/src/: convert_filenames.py  mkv_processor.py
src/: convert_filenames.py  mkv_processor.py
